--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-
+server.port=8081
+server.servlet.context-path=/app
+value.name=carlos
+value.lastname=galvis
+value.random=${random.value}
+user.email=carlos@galvis.com
+user.password=1234567890*
+user.age=21
+logging.level.root=info
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=error
+spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.h2Dialect
